# py-chess

./: main.py  pyproject.toml
src/chess/core/: game.py
src/chess/core/board/: __init__.py  base.py  matrix.py  position.py  view.py
src/chess/core/datatypes/: __init__.py  color.py  move.py  square.py
src/chess/core/gameloop/: game.py  move_history.py  move_maker.py
src/chess/core/pieces/: __init__.py  base.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
src/chess/core/view/: board_view.py
src/chess/io/: fen.py
tests/: test_basic.py  test_board.py  test_gameloop.py  test_movehistory.py  test_pieces.py  test_position.py
