[project]
name = "chess"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
extend-select = [
    "N",    # pep8-naming
    "B",    # bugbear (bugs comuns e pegadinhas)
    "SIM",  # simplificações
    "C4",   # comprehensions
    "RET",  # consistência de return (ajudaria a pegar o caso do return morto!)
]